# gifbadge_software

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  sdkconfig.debug  sdkconfig.defaults  sdkconfig.defaults.1_28  sdkconfig.defaults.2_1  sdkconfig.defaults.esp32s3
config/esp32s3/: lv_conf.h
config/linux/: FreeRTOSConfig.h  lv_conf.h
external-deps/npmx/: CMakeLists.txt
idf-components/bootloader_support/: CMakeLists.txt
idf-components/bootloader_support/src/: bootloader_sha.c
idf-components/fatfs/src/: ffconf.h
idf-components/gifbadge_hal_esp32/: CMakeLists.txt  esp_efuse_custom_table.c  hw_init.cpp
idf-components/gifbadge_hal_esp32/boards/: board_data.c  board_esp32s3.cpp  board_esp32s3_sdmmc.cpp
idf-components/gifbadge_hal_esp32/boards/full/: v0_2_v0_4_common.cpp  v0_6.cpp
idf-components/gifbadge_hal_esp32/boards/mini/: v0.cpp  v0_1.cpp  v0_3.cpp
idf-components/gifbadge_hal_esp32/drivers/: PmicNpm1300.cpp  VbusGpio.cpp  backlight_dummy.cpp  backlight_ledc.cpp  battery_analog.cpp  battery_dummy.cpp  battery_max17048.cpp  config_nvs.cpp  display_dummy.cpp  display_gc9a01.cpp  display_st7701s.cpp  esp_io_expander_gpio.cpp  keys_esp_io_expander.cpp  keys_generic.cpp  keys_gpio.cpp  touch_ft5x06.cpp
idf-components/gifbadge_hal_esp32/include/boards/: boards_esp32s3.h
idf-components/gifbadge_hal_esp32/include/drivers/: PmicNpm1300.h  backlight_dummy.h  backlight_ledc.h  battery_dummy.h  config_nvs.h  display_dummy.h  esp_io_expander_gpio.h  keys_generic.h  keys_gpio.h  touch_ft5x06.h
idf-components/gifbadge_hal_esp32/public_include/: esp_ota.h
idf-components/nvs_flash/: CMakeLists.txt
idf-components/nvs_flash/src/: nvs_partition_lookup.cpp  nvs_partition_manager.cpp
lib/embeddedimage/: CMakeLists.txt  bitbank2.cpp  bmp.cpp  gif.cpp  jpeg.cpp  png.cpp  resize.cpp  s3_palette_buffer.S
lib/embeddedimage/include/: bmp.h  gif.h  image.h  jpeg.h  png.h
lib/filebuffer/: CMakeLists.txt  filebuffer.cpp
lib/filebuffer/include/: filebuffer.h
lib/fileutil/: CMakeLists.txt
lib/font_render/: CMakeLists.txt  font_render.cpp
lib/gifbadge_hal/include/hal/: board.h  config_storage.h  gpio.h  touch.h
lib/gifbadge_hal_linux/boards/: board_linux.cpp
lib/gifbadge_hal_linux/drivers/: config_mem.cpp  display_sdl.cpp  key_sdl.cpp  touch_sdl.cpp
lib/gifbadge_hal_linux/include/: mask.h
lib/gifbadge_hal_linux/include/boards/: board_linux.h
lib/gifbadge_hal_linux/public_include/: log.h
lib/gifbadge_hal_linux/public_include/drivers/: display_sdl.h  key_sdl.h  touch_sdl.h
lib/simplebmp/include/: simplebmp.h
main/: CMakeLists.txt  display.cpp  input.cpp  main.cpp  resize.cpp
main/include/: display.h  input.h  resize.h
main/include/ui/: battery.h  file_select.h  low_batt.h  menu.h  no_sd.h  ota.h  reset_settings.h  style.h
main/ui/: battery.cpp  device_info.cpp  file_options.cpp  file_select.cpp  help.cpp  low_batt.cpp  main_menu.cpp  menu.cpp  no_sd.cpp  ota.cpp  reset_settings.cpp  storage.cpp  style.c  usb_connected.cpp
main/ui/fonts/: battery_symbols_14.c  material_icons.c  material_icons_56.c  material_icons_special.c
