cmake_minimum_required(VERSION 3.1...3.29)
project(FileUtil VERSION 1.0 LANGUAGES C CXX)
add_library(FileUtil "dirname.c" "directory.c" "path.c" "file.cpp" "hash_path.c" "${CMAKE_SOURCE_DIR}/external-deps/md5-c/md5.c")
target_include_directories(FileUtil PUBLIC "include")
target_include_directories(FileUtil PRIVATE "${CMAKE_SOURCE_DIR}/external-deps/md5-c/")
set(C_STANDARD 11)
set(CMAKE_CXX_STANDARD 23)
set(C_EXTENSIONS ON)
set(CXX_EXTENSIONS ON)


set_property(TARGET FileUtil PROPERTY C_STANDARD 11)
set_property(TARGET FileUtil PROPERTY C_EXTENSIONS ON)
set_property(TARGET FileUtil PROPERTY CXX_STANDARD 23)
set_property(TARGET FileUtil PROPERTY CXX_EXTENSIONS ON)
target_compile_options(FileUtil PUBLIC -D_GNU_SOURCE)

if(ESP_PLATFORM)
    if(TARGET idf::newlib)
        target_link_libraries(FileUtil PRIVATE idf::newlib)
    elseif (TARGET idf::esp_libc)
        target_link_libraries(FileUtil PRIVATE idf::esp_libc)
    else()
        message(FATAL_ERROR "no libc found")
    endif()
    if(CONFIG_IDF_TARGET_ESP32S3)
        set(ESP_COMPILE_OPTIONS -ffunction-sections -fdata-sections -O2 -Wwrite-strings -fno-jump-tables -fno-tree-switch-conversion -fstrict-volatile-bitfields -mdisable-hardware-atomics -gdwarf-4 -ggdb $<$<COMPILE_LANGUAGE:CXX>:-fno-exceptions -fno-rtti -fuse-cxa-atexit>)
    else()
        set(ESP_COMPILE_OPTIONS -ffunction-sections -fdata-sections -O2 -Wwrite-strings -fno-jump-tables -fno-tree-switch-conversion -fstrict-volatile-bitfields -gdwarf-4 -ggdb $<$<COMPILE_LANGUAGE:CXX>:-fno-exceptions -fno-rtti -fuse-cxa-atexit>)
    endif()
    target_compile_options(FileUtil PUBLIC ${ESP_COMPILE_OPTIONS})
    target_link_options(FileUtil PUBLIC ${ESP_COMPILE_OPTIONS})
else ()
    include(CTest)
    add_subdirectory(test)
#    target_compile_options(FileUtil PUBLIC -g -fprofile-arcs -ftest-coverage)
endif()


